# balun

./: .gitignore  Cargo.toml  README.md  config.example.toml
migrations/: 20230518041952_operators.up.sql  20230518043257_bans.up.sql  20230518232645_disappearing_channels.down.sql  20230518232645_disappearing_channels.up.sql  20230520190539_serious_channels.down.sql  20230520190539_serious_channels.up.sql  20230521003517_messages.up.sql
src/: config.rs  database.rs  main.rs  permissions.rs
src/commands/: amisus.rs  ban.rs  deop.rs  help.rs  mod.rs  op.rs  ping.rs  serious.rs  susban.rs  truncate.rs  unban.rs
