[package]
name = "balun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.163", features = ["serde_derive"]}
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11.5"}
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
toml = "0.7.3"

